@@ -72,6 +72,8 @@ Version 1.7.8
        shown incorrectly. (Stefan)
 - BUG: Issue #357: tagging externals from log
        dialog not implemented. (Stefan)
+- BUG: Issue #359: out of memory exception
+       in commit dialog. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
